; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_malloc.c_sqlite3Malloc.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_malloc.c_sqlite3Malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__, i64 }
%struct.TYPE_4__ = type { i8* (i32)* }
%struct.TYPE_6__ = type { i32 }

@sqlite3GlobalConfig = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@mem0 = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @sqlite3Malloc(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = icmp sge i32 %7, 2147483392
  br i1 %8, label %9, label %10

9:                                                ; preds = %6, %1
  store i8* null, i8** %3, align 8
  br label %25

10:                                               ; preds = %6
  %11 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @sqlite3GlobalConfig, i32 0, i32 1), align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %10
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @mem0, i32 0, i32 0), align 4
  %15 = call i32 @sqlite3_mutex_enter(i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @mallocWithAlarm(i32 %16, i8** %3)
  %18 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @mem0, i32 0, i32 0), align 4
  %19 = call i32 @sqlite3_mutex_leave(i32 %18)
  br label %24

20:                                               ; preds = %10
  %21 = load i8* (i32)*, i8* (i32)** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @sqlite3GlobalConfig, i32 0, i32 0, i32 0), align 8
  %22 = load i32, i32* %2, align 4
  %23 = call i8* %21(i32 %22)
  store i8* %23, i8** %3, align 8
  br label %24

24:                                               ; preds = %20, %13
  br label %25

25:                                               ; preds = %24, %9
  %26 = load i8*, i8** %3, align 8
  %27 = call i32 @EIGHT_BYTE_ALIGNMENT(i8* %26)
  %28 = call i32 @assert(i32 %27)
  %29 = load i8*, i8** %3, align 8
  ret i8* %29
}

declare dso_local i32 @sqlite3_mutex_enter(i32) #1

declare dso_local i32 @mallocWithAlarm(i32, i8**) #1

declare dso_local i32 @sqlite3_mutex_leave(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @EIGHT_BYTE_ALIGNMENT(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
